# weather-trading-bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
clients/: hrrr.py  kalshi_client.py  nws_settlement.py  polymarket_client.py  weather.py
core/: forecaster.py  signals.py
dashboard/: api.py  index.html
docs/: go_live_checklist.md  live_api_smoke.md  operator_runbook.md  timestamp_doctrine.md
execution/: exchange_executor.py  lifecycle.py  orderbook.py
research/: autoresearch.py  bias_correction.py  calibrator.py  optimizer.py  walk_forward.py
risk/: guards.py  reconciliation.py
scripts/: smoke_kalshi.py  smoke_polymarket.py  smoke_reconciliation.py
shared/: params.py  types.py
state/: db.py
strategies/: analytics.py  base.py  convergence_exit.py  disagreement.py  model_release.py  promotion.py  shadow_logger.py  value_entry.py
strategy_router/: allocator.py  brain.py  scorecard.py  selector.py
tests/: test_dashboard_api.py  test_db.py  test_ensemble_segments.py  test_executable_edge.py  test_forecast_lineage.py  test_kalshi_client.py  test_nws_settlement.py  test_paper_execution.py  test_phase_b.py  test_polymarket_client.py  test_research.py  test_risk_guards.py  test_router.py  test_shadow.py  test_strategies.py  test_timestamp_doctrine.py  test_v8_bugs.py
